--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Junxian Chen (陈俊先)"
   pronouns         : # example: "she/her"  
-  bio              : "I'm looking for any Phd/RA positions"
+  bio              : "I'm looking for any RA/PhD positions"
   location         : "China"
   employer         : "N/A"
   uri              : # URL
@@ -38,7 +38,7 @@ author:
   semantic         : # URL
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
-
+  
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
