--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "site-logo.png"
   name             : "Junxian Chen (陈俊先)"
   pronouns         : # example: "she/her"  
   bio              : "I'm looking for any RA/PhD positions"
